# advisor360-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  Pipfile  README.md  STRUCTURE_IMPROVEMENTS.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_logging.py
app/: main.py  models.py
app/api/: __init__.py  commissions.py  dashboard.py  dependencies.py  partners.py  routes_users.py
app/api/dtos/: README.md  __init__.py  commission_dtos.py  common_dtos.py  dashboard_dtos.py  mappers.py  partner_dtos.py  transaction_dtos.py  usage_examples.py
app/core/: __init__.py  bootstrap.py  config.py  container.py  error_handler_registry.py  error_handlers.py  exceptions.py
app/core/config/: app_config.py  database_config.py
app/core/exceptions/: README.md  __init__.py  domain_exceptions.py  error_responses.py  infrastructure_exceptions.py  repository_exceptions.py  usage_examples.py
app/core/logging/: __init__.py  config.py  error_logger.py  request_logger.py  structured_logger.py
app/core/middleware/: __init__.py  error_middleware.py  logging_middleware.py  metrics_middleware.py
app/db/: supabase.py
app/domain/: __init__.py  commission.py  partner.py  transaction.py
app/domain/value_objects/: __init__.py  financial_year.py  money.py
app/models/: base.py  commissions.py  database.py
app/models/api/: common.py  requests.py  responses.py
app/repositories/: __init__.py  base.py
app/repositories/interfaces/: __init__.py  commission_repository.py  partner_repository.py  transaction_repository.py
app/repositories/models/: __init__.py  commission_model.py  partner_model.py
app/repositories/supabase/: __init__.py  base_repository.py  commission_repository.py  partner_repository.py
app/services/: __init__.py  commissions.py  dashboard.py  partners.py
app/services/interfaces/: __init__.py  commission_service.py  dashboard_service.py  partner_service.py
app/utils/: date_utils.py
scripts/: demo_workflow.py  test_dev_tools.py  verify_setup.py
